# soldier_sim

./: .env.template  .gitignore  README.md  check.ipynb  main.py  pyproject.toml  simulation_visualization.py
configs/: default.yaml  production.yaml
data/: personas.json  pois.json  pois_improved.json
docs/: Planner.md  design.md  memory_logic.md  processing_flow.md  rule_based_simulation.md  system_overview.md  technical_details.md  エージェント性格タイプ.md
src/agent_system/: agent.py  archetypes.py  kalman.py  memory.py  needs.py  poi.py  simulation.py  skills.py  utils.py
src/configs/: settings.py
src/llm_app/: client_azure.py  client_gemini.py  planner.py  schemas.py
src/utils/: df_utils.py  get_logger.py
tests/: test_agent_improvements.py  test_simulation.py
