[project]
name = "city-sim"
version = "0.1.0"
description = "Multi-Agent LLM Military Simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "matplotlib>=3.7.0",
    "plotly>=5.0.0",
    "PyYAML>=6.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=0.3.27",
    "ruff>=0.12.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.68",
    "langsmith>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
gemini = [
    "langchain-google-genai>=1.0.0"
]
azure = [
    "langchain-openai>=0.0.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
